mail templates are now created in code

--- a/src/main/resources/com/company/haulmont/template/template1.html
+++ b/src/main/resources/com/company/haulmont/template/template1.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
 </head>
 <body>
 <table id="iaa9-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2" width="100%" height="150" style="box-sizing: border-box; height: 150px; margin: 0 auto 10px auto; padding: 5px 5px 5px 5px; width: 100%;">
@@ -32,7 +30,7 @@
                 <tr id="isf9x-2-2-2-2-2-2-2-2-2-2-2-2-2" style="box-sizing: border-box;">
                     <td id="i3xdk-2-2-2-2-2-2-2-2-2-2-2-2-2" width="50%" valign="top" style="box-sizing: border-box; font-size: 12px; font-weight: 300; vertical-align: top; color: rgb(111, 119, 125); margin: 0; padding: 0; width: 50%;">
                         <div id="irhl1-2-2-2-2-2-2-2-2-2-2-2-2-2" style="box-sizing: border-box; padding: 10px;">
-                            <p id="ib3hva-2-2-2-2-2-2-2-2-2-2-2-2" style="box-sizing: border-box; text-align: center;"><span id="im9azm-2-2-2-2-2-2-2-2-2-2-2-2" style="box-sizing: border-box; color: #000000;"><span id="ivue2i-2-2-2-2-2-2-2-2-2-2-2-2" style="box-sizing: border-box; font-size: 20px;">The contract № ${contract.number} was signed today, here are some details:</span></span></p>
+                            <p id="ib3hva-2-2-2-2-2-2-2-2-2-2-2-2" style="box-sizing: border-box; text-align: center;"><span id="im9azm-2-2-2-2-2-2-2-2-2-2-2-2" style="box-sizing: border-box; color: #000000;"><span id="ivue2i-2-2-2-2-2-2-2-2-2-2-2-2" style="box-sizing: border-box; font-size: 20px;">The contract ${contract.number} was signed today, here are some details:</span></span></p>
                         </div></td>
                     <td id="ia7fq-2-2-2-2-2-2-2-2-2-2-2-2-2" width="50%" valign="top" style="box-sizing: border-box; font-size: 12px; font-weight: 300; vertical-align: top; color: rgb(111, 119, 125); margin: 0; padding: 0; width: 50%;">
                         <div id="i8f2r-2-2-2-2-2-2-2-2-2-2-2-2-2" style="box-sizing: border-box; padding: 10px;">
